--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,8 +7,9 @@
 		android:title="@string/control_type"
 		android:dialogTitle="@string/select_control_type" />
 
-	<android.support.v7.preference.SwitchPreferenceCompat
-		android:key="test"
-		android:title="Switch"/>
+	<android.support.v7.preference.ListPreference
+		android:key="@string/pref_drive_mode"
+		android:title="@string/drive_mode"
+		android:dialogTitle="@string/select_drive_mode" />
 
 </android.support.v7.preference.PreferenceScreen>
