--- a/app/src/main/res/layout/fragment_display_environment.xml
+++ b/app/src/main/res/layout/fragment_display_environment.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
         <veszelovszki.soma.rc_car.view.EnvironmentView
+            android:id="@+id/environment_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 </RelativeLayout>
