--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,10 +2,10 @@
 <android.support.v7.preference.PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<android.support.v7.preference.ListPreference
-		android:key="@string/pref_control_type"
-		android:title="@string/control_type"
-		android:dialogTitle="@string/select_control_type" />
+	<!--<android.support.v7.preference.ListPreference-->
+	<!--android:key="@string/pref_control_type"-->
+	<!--android:title="@string/control_type"-->
+	<!--android:dialogTitle="@string/select_control_type" />-->
 
 	<android.support.v7.preference.ListPreference
 		android:key="@string/pref_drive_mode"
