Message codes refactored, absolute environment points vizualization implemented.

--- a/app/src/main/res/layout-land/fragment_control_steering_wheel.xml
+++ b/app/src/main/res/layout-land/fragment_control_steering_wheel.xml
@@ -35,7 +35,7 @@
 
         </RelativeLayout>
 
-        <veszelovszki.soma.rc_car.view.EnvironmentView
+        <veszelovszki.soma.rc_car.view.RelativeEnvironmentView
             android:id="@+id/environment_view"
             android:layout_height="match_parent"
             android:layout_width="0dp"
