--- a/app/src/main/res/layout-land/fragment_control_steering_wheel.xml
+++ b/app/src/main/res/layout-land/fragment_control_steering_wheel.xml
@@ -35,7 +35,14 @@
 
         </RelativeLayout>
 
-        <veszelovszki.soma.rc_car.view.RelativeEnvironmentView
+        <!--<veszelovszki.soma.rc_car.view.RelativeEnvironmentView-->
+            <!--android:id="@+id/environment_view"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="2"-->
+            <!--android:visibility="gone"/>-->
+
+        <veszelovszki.soma.rc_car.view.AbsoluteEnvironmentView
             android:id="@+id/environment_view"
             android:layout_height="match_parent"
             android:layout_width="0dp"
